--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.google.com/share?selection.family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900|Quantico:ital,wght@0,400;0,700;1,400;1,700|Space+Grotesk:wght@300..700');
 
 body, header, nav, main, section, footer, img, figure, figcaption, div, ul, p {
-  margin:0;
+  margin: 0;
   padding: 0;
   border: 0;
 }
@@ -15,7 +15,7 @@ body {
   background-position: center center;
 }
 
-.wrapper{
+.wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -25,14 +25,14 @@ body {
   color: #000000;
 }
 
-.banner{
+.banner {
   background-color: #000000;
   color: #ffffff;
   text-align: center;
 }
 
-.banner-img{
-  max-width: 45% ;
+.banner-img {
+  max-width: 45%;
   height: auto;
 }
 
@@ -42,26 +42,25 @@ body {
   font-family: 'Bodoni Moda', sans-serif;
 }
 
-
 .nav-bar {
-  display: flex; /* Align items in a row */
-  justify-content: center; /* Center items horizontally */
-  align-items: center; /* Align items vertically */
-  padding: 10px 0; /* Add padding around the nav bar */
-  background-color: #264769; /* Same background color */
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-  border-bottom: 2px solid #264769; /* Optional border */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  background-color: #264769;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-bottom: 2px solid #264769;
 }
 
 .nav-bar ul {
-  display: flex; /* Align list items in a row */
+  display: flex;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
 .nav-bar li {
-  padding: 8px 15px; /* Add spacing between nav items */
+  padding: 8px 15px;
   transition: background-color 0.3s ease, color 0.3s ease;
   font-family: 'Space Grotesk', sans-serif;
   font-size: 20px;
@@ -78,27 +77,26 @@ body {
   color: #ffffff;
 }
 
-
-.content{
+.content {
   flex: 1;
   padding: 20px;
   font-family: 'Bodoni Moda', sans-serif;
 }
 
-.footer{
+.footer {
   background-color: #000000;
-  color: #264769;
+  color: #ffffff;
   text-align: center;
   padding: 20px;
   font-family: 'Quantico', sans-serif;
 }
 
-.footer a{
+.footer a {
   text-decoration: none;
   color: #ffffff;
 }
 
-.footer a:hover{
+.footer a:hover {
   background-color: #ffffff;
   color: #000000;
   cursor: pointer;
